--- a/Manual/HTML/Sbemail Songs.html
+++ b/Manual/HTML/Sbemail Songs.html
@@ -35,7 +35,7 @@
                 <img src="img/Component/Sbemail Songs 1.svg" class="diagram">
                 <h2>On the Subject of Sbemail Songs</h2>
                 <p class="flavour-text">Where would I be without my Sbemail Songs?</p>
-                <table style="float:left;margin-right:20px;margin-bottom:30px"><tbody>
+                <table style="float:left;margin-right:10px;margin-bottom:20px"><tbody>
                     <tr><td>Tandy 400</td><td>XOR</td></tr>
                     <tr><td>Compy 386</td><td>OR</td></tr>
                     <tr><td>Lappy 486</td><td>AND</td></tr>
@@ -43,17 +43,17 @@
                     <tr><td>Compé</td><td>NOR</td></tr>
                     <tr><td>Lappier</td><td>NAND</td></tr>
                 </tbody></table>
-                <div style="font-size:10pt"><p>This module will have a computer-like background. There are four buttons labeled song 1-4, a small screen under each diplaying a digit in hexadecimal accompanied by two arrows, and a button labeled "submit".</p>
-                <p>When clicked, each of the song buttons will play a short song, called a "sbemail song", that has a number associated with it. See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
-                <p>Take the number associated with each sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Concatenate these to get a 32-bit string, and perform the operation associated with the background on each pair of bits (i.e. the 1st and 2nd bit, the 3rd and 4th bit, etc.; use the table above and to the left for reference). Arrange the resulting 16 bits into a 4x4 grid in reading order to get the initial grid.</p>
+                <div style="font-size:10pt"><p>This module will have a computer-like background. There are four buttons labeled song 1-4, a small screen under each displaying a digit in hexadecimal accompanied by two arrows, and a button labeled "submit".</p>
+                <p>When clicked, each of the song buttons will play a short audio clip called a "sbemail song" that has a number associated with it. See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
+                <p>Take the number associated with each sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Concatenate these to get a 32-bit string, and perform the operation associated with the background on each pair of bits (use the table above and to the left for reference). Arrange the resulting 16 bits into a 4x4 grid in reading order to get the initial grid.</p>
                 <table style="text-align:center;font-size:11pt"><thead class="concept1table"><tr><th>There are at least:</th><th>The serial number contains:</th><th>The module contains:</th><th>The initial grid contains:</th></tr></thead><tbody>
                     <tr><td>2 lit indicators</td><td>Any vowels</td><td>A prime-numbered sbemail song</td><td>A 0 in the top-left corner</td></tr>
                     <tr><td>5 modules</td><td>More numbers than letters</td><td>A sbemail song from the Compy era (41-118)</td><td>Two 1s horizontally adjacent to each other</td></tr>
-                    <tr><td>3 battery holders</td><td>Any letter in "SBEMAIL"</td><td>A sbemail song in which Strong Bad does not say "email" or "sbemail"</td><td>Five or more 1s</td></tr>
+                    <tr><td>3 battery holders</td><td>Any letter in "SBEMAIL"</td><td>A sbemail song without the words "email" or "sbemail"</td><td>Five or more 1s</td></tr>
                     <tr><td>3 different port types</td><td>Digits that add up to 15 or more</td><td>Two sbemail song numbers that both end in the same digit</td><td>A row or column with two of each digit</td></tr>
                 </tbody></table>
-                <p>Using the table above, create another 4x4 grid of bits, placing a 1 in every true condition's spot and a 0 in every false condition's spot. Then overlay the two tables, applying the same operation as before on every two bits to get a final 4x4 grid.</p>
-                <p>Take the numbers of the each quadrant of the final grid in reading order, concatenate them, and convert them to a hexadecimal digit. Change each display to the resulting number and then submit.</p></div>
+                <p>Using the table above, create another 4x4 grid of bits, placing a 1 in every true condition's spot and a 0 in every false condition's spot. Then overlay the two tables, applying the same operation as before to get a final 4x4 grid.</p>
+                <p>Take the numbers of each quadrant of the final grid in reading order, concatenate them, and convert them to a hexadecimal digit. Change each display to the resulting number and then submit.</p></div>
             </div>
             <div class="page-footer relative-footer">Page 1 of 1</div>
         </div>
@@ -77,8 +77,8 @@
                     <table class="concept2table"><tbody>
                         <tr><th>0-40</th><td>AND</td></tr>
                         <tr><th>41-118</th><td>OR</td></tr>
-                        <tr><th>119-205</th><td>XOR</td></tr>
-                        <tr><th>205-220</th><td>NAND</td></tr>
+                        <tr><th>119-209</th><td>XOR</td></tr>
+                        <tr><th>209-220</th><td>NAND</td></tr>
                         <tr><th>220-240</th><td>NOR</td></tr>
                         <tr><th>240-255</th><td>XNOR</td></tr>
                     </tbody></table>
@@ -89,10 +89,10 @@
                         <tr><th>Digit at this<br>point is odd</th><td>Multiply by 3</td></tr>
                         <tr><th>No changes<br>have been made</th><td>Change digit to<br>10<sub>hex</sub> minus<br>digit</td></tr>
                     </tbody></table>
-                <div style="font-size:11.5pt"><p>On this module will be a stage display in hexadecimal, a larger rectangular display below, a play button and a 4x4 grid of hexadecimal digits. Pressing the play button will play a short song called a "sbemail song". Every time a <a href="https://ktane.timwi.de/More/Ignore%20Table.html#mod=sbemailsongs">non-ignored module</a> is solved, this module will change which sbemail song is played.</p>
+                <div style="font-size:11.5pt"><p>On this module will be a stage display in hexadecimal, a larger rectangular display below, a play button and a 4x4 grid of hexadecimal digits. Pressing the play button will play a short audio clip called a "sbemail song" that has a number associated with it. Every time a <a href="https://ktane.timwi.de/More/Ignore%20Table.html#mod=sbemailsongs">non-ignored module</a> is solved, this module will change which sbemail song is played.</p>
                 <p>See <a href="http://hrwiki.org/wiki/Strong_Bad_Email_Intros">here</a> for a full list of sbemail song transcriptions. <b>NOTE: In the case of more than one of the same number, such as 122a/122b or 193/193½ where the transcriptions are completely different, only the first of each can appear on the module.</b></p>
-                <p>At each stage, take the number associated with the current sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Rearrange the binary number as shown in the first table depending on what was in the name of the last solved module. For modules that contain more than one of these names (e.g. Morse-A-Maze), apply all appropriate transformations from the top down. For stage 1, before any modules are solved, do not rearrange the binary number. On every pair of bits, perform the bitwise operator corresponding to the resulting number to make the sequence 4 bits long, then convert it to a hexadecimal digit. Modify this digit according to the third table. If the digit exceeds 10<sub>hex</sub> at any point, modulo 10<sub>hex</sub> before continuing.</p>
-                <p>Throughout solving modules, keep track of the resulting digits. After every non-ignored module is solved, the module will allow the 4x4 grid of buttons to be pressed. Submit the obtained sequence of hexadecimal digits to solve the module. There is no penalty for attempting to press any of the buttons in the 4x4 grid before this change.</p></div>
+                <p>At each stage, take the number associated with the current sbemail song and convert it to binary, with zeros added to the left to make it 8 bits long if needed. Rearrange the binary number as shown in the first table depending on what was in the name of the last solved module. For modules that contain more than one of these names (e.g. Morse-A-Maze), apply all appropriate rearrangements from the top down. For stage 1, before any modules are solved, do not rearrange the binary number. On every pair of bits, perform the bitwise operator corresponding to the resulting number to make the sequence 4 bits long, then convert it to a hexadecimal digit. Modify this digit according to the third table. If the digit exceeds 10<sub>hex</sub> at any point, modulo 10<sub>hex</sub> before continuing.</p>
+                <p>Throughout solving modules, make a sequence of the resulting digits. After every non-ignored module is solved, this module will allow the 4x4 grid of buttons to be pressed. Submit the obtained sequence to solve the module. There is no penalty for attempting to press any of the buttons in the 4x4 grid before this change.</p></div>
             </div>
             <div class="page-footer relative-footer">Page 1 of 1</div>
         </div>
