--- a/Manual/HTML/Sid Hoffrenchman.html
+++ b/Manual/HTML/Sid Hoffrenchman.html
@@ -7,6 +7,65 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/font.css">
+    <script src="js/ktane-utils.js"></script>
+    <script src="js/ruleseed.js"></script>
+    <script src="js/jquery.3.7.0.min.js"></script>
+    <script>
+      var marzipan = '<img src="img/Sid Hoffrenchman/marzipan.png" height="128px"><br>Marzipan (purple)';
+      var strongbad = '<img src="img/Sid Hoffrenchman/strongbad.png" height="128px"><br>Strong Bad (tan)';
+      var coachz = '<img src="img/Sid Hoffrenchman/coachz.png" height="128px"><br>Coach Z (green)';
+      var kot = '<img src="img/Sid Hoffrenchman/kot.png" height="128px"><br>The King of Town (red)';
+      var homsar = '<img src="img/Sid Hoffrenchman/homsar.png" height="128px"><br>Homsar (blue)';
+      var pompom = '<img src="img/Sid Hoffrenchman/pompom.png" height="128px"><br>Pom Pom (yellow)';
+      var strongmad = '<img src="img/Sid Hoffrenchman/strongmad.png" height="128px"><br>Strong Mad<br>(dark blue)';
+      var bubs = '<img src="img/Sid Hoffrenchman/bubs.png" height="128px"><br>Bubs (orange)';
+      var strongsad = '<img src="img/Sid Hoffrenchman/strongsad.png" height="128px"><br>Strong Sad (gray)';
+      var thecheat = '<img src="img/Sid Hoffrenchman/thecheat.png" height="70px"><br>The Cheat (gold)';
+      var tiebreaker = "Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.";
+      var defaultorder = [marzipan, strongbad, coachz, kot, homsar, pompom, strongmad, bubs, strongsad, thecheat];
+      var scrambled = [];
+      function getDefaultRules() {
+        scrambled = [marzipan, strongbad, coachz, kot, homsar, pompom, strongmad, bubs, strongsad, thecheat];
+        for (var i = 0; i < 10; i++) {
+          if (i < 5)
+            $(`#hoffTable tr:nth-child(2) td:nth-child(${i+1})`).html(scrambled[i]);
+          else $(`#frenchTable tr:nth-child(2) td:nth-child(${i-4})`).html(scrambled[i]);
+        }
+        tiebreaker = "Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.";
+        $("#tiebreaker").text(tiebreaker);
+      }
+
+      function setDefaultRules() {
+        getDefaultRules();
+        defaultorder = [marzipan, strongbad, coachz, kot, homsar, pompom, strongmad, bubs, strongsad, thecheat];
+        for (var i = 0; i < 10; i++) {
+          if (i < 5)
+            $(`#hoffTable tr:nth-child(2) td:nth-child(${i+1})`).html(defaultorder[i]);
+          else $(`#frenchTable tr:nth-child(2) td:nth-child(${i-4})`).html(defaultorder[i]);
+        }
+        $("#tiebreaker").text(tiebreaker);
+      }
+
+      function setRules(rnd) {
+        getDefaultRules();
+        var n = scrambled.length;
+        while (n > 1) {
+          n--;  
+          var k = rnd.nextMax(n + 1);
+          var value = scrambled[k];
+          scrambled[k] = scrambled[n];
+          scrambled[n] = value;
+        }
+        for (var i = 0; i < 10; i++) {
+          if (i < 5)
+            $(`#hoffTable tr:nth-child(2) td:nth-child(${i+1})`).html(scrambled[i]);
+          else $(`#frenchTable tr:nth-child(2) td:nth-child(${i-4})`).html(scrambled[i]);
+        }
+        if (rnd.nextMax(2) == 1)
+          $("#tiebreaker").text("Submit Sid Frenchman if the current score (the white number in the top left corner) is even, and Sid Hoffman if it is odd.");
+        else $("#tiebreaker").text(tiebreaker);
+      }
+    </script>
   </head>
   <body>
     <div class="section">
@@ -20,33 +79,33 @@
           <h2>On the Subject of Sid Hoffrenchman</h2>
           <p class="flavour-text">Using the most state-of-the-art coroutiniest technologies, we can see what an actual needy module with Homestar Runner would be like without the risk of personal injury. Or vomiting.</p>
           <p>Upon activation, Homestar Runner will ask the defuser “Sid Hoffman or Sid Frenchman?”, and there will be 1 to 4 characters present in the background. Use the tables below to determine which option has a greater amount of characters present, and submit the appropriate answer.</p>
-          <table style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
+          <table id="hoffTable" style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
             <tr>
               <th colspan="5">Sid Hoffman</th>
               </tr>
-              <tr>
-                <td><img src="img/Sid Hoffrenchman/marzipan.png" height="128px"><br>Marzipan</td>
-                <td><img src="img/Sid Hoffrenchman/strongbad.png" height="128px"><br>Strong Bad</td>
-                <td><img src="img/Sid Hoffrenchman/coachz.png" height="128px"><br>Coach Z</td>
-                <td><img src="img/Sid Hoffrenchman/kot.png" height="128px"><br>The King of Town</td>
-                <td><img src="img/Sid Hoffrenchman/homsar.png" height="128px"><br>Homsar</td>
+              <tr style="vertical-align:bottom">
+                <td><img src="img/Sid Hoffrenchman/marzipan.png" height="128px"><br>Marzipan (purple)</td>
+                <td><img src="img/Sid Hoffrenchman/strongbad.png" height="128px"><br>Strong Bad (tan)</td>
+                <td><img src="img/Sid Hoffrenchman/coachz.png" height="128px"><br>Coach Z (green)</td>
+                <td><img src="img/Sid Hoffrenchman/kot.png" height="128px"><br>The King of Town (red)</td>
+                <td><img src="img/Sid Hoffrenchman/homsar.png" height="128px"><br>Homsar (blue)</td>
               </tr>
             </tbody></table>
           <br>
-          <table style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
+          <table id="frenchTable" style="margin-left:auto;margin-right:auto;text-align:center"><tbody>
             <tr>
               <th colspan="5">Sid Frenchman</th>
               </tr>
-              <tr>
-                <td><img src="img/Sid Hoffrenchman/pompom.png" height="128px"><br>Pom Pom</td>
-                <td><img src="img/Sid Hoffrenchman/strongmad.png" height="128px"><br>Strong Mad</td>
-                <td><img src="img/Sid Hoffrenchman/bubs.png" height="128px"><br>Bubs</td>
-                <td><img src="img/Sid Hoffrenchman/strongsad.png" height="128px"><br>Strong Sad</td>
-                <td style="vertical-align:bottom"><img src="img/Sid Hoffrenchman/thecheat.png" height="70px"><br>The Cheat</td>
+              <tr style="vertical-align:bottom">
+                <td><img src="img/Sid Hoffrenchman/pompom.png" height="128px"><br>Pom Pom (yellow)</td>
+                <td><img src="img/Sid Hoffrenchman/strongmad.png" height="128px"><br>Strong Mad<br>(dark blue)</td>
+                <td><img src="img/Sid Hoffrenchman/bubs.png" height="128px"><br>Bubs (orange)</td>
+                <td><img src="img/Sid Hoffrenchman/strongsad.png" height="128px"><br>Strong Sad (gray)</td>
+                <td><img src="img/Sid Hoffrenchman/thecheat.png" height="70px"><br>The Cheat (gold)</td>
               </tr>
             </tbody></table>
           <h3>Tiebreaker</h3>
-          <p>Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.</p>
+          <p id="tiebreaker">Submit Sid Hoffman if the current score (the white number in the top left corner) is even, and Sid Frenchman if it is odd.</p>
         </div>
         <div class="page-footer relative-footer">Page 1 of 1</div>
       </div>
